--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "dotenv": "^17.2.0",
     "sequelize-cli": "^6.6.3"
   }
 }
