--- a/server/config/config.json
+++ b/server/config/config.json
@@ -12,5 +12,9 @@
     "database": "sport_connect_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URL"
+
   }
 }
